--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -2,7 +2,6 @@
 @import './shared/mixins';
 
 .footer {
-    height: 300px;
     background-color: rgba($theme-color, 0.6);
     display: block;
     position: relative;
@@ -65,6 +64,17 @@
                 @include paragraph-typography;
                 color: $font-color;
             }
+        }
+    }
+}
+
+@media (max-width: $Medium) {
+    .footer {
+        &__content {
+            justify-content: flex-start;
+        }
+        &__content-info {
+           flex-direction: column;
         }
     }
 }
