--- a/styles/_portfolio.scss
+++ b/styles/_portfolio.scss
@@ -80,6 +80,29 @@
   }
 }
 
+@media (max-width: $Medium) {
+  .portfolio__slider-cards-item {
+    width: 80%;
+    
+    img {
+      border-radius: 5px;
+    }
+  }
+  
+  .portfolio__slider-cards {
+    height: 300px;
+  }
+  
+  .portfolio {
+    padding: 50px 0;
+  }
+
+  .portfolio__title {
+    margin-bottom: 20px;
+    text-shadow: 1px 1px 2px $font-color;
+  }
+}
+
 @keyframes sliding {
   0% {
     left: 0%;
