--- a/styles/main.css
+++ b/styles/main.css
@@ -37,6 +37,7 @@
 .hero-section__intro {
   width: 100%;
   display: flex;
+  justify-content: center;
   color: #FDFDFD;
   position: absolute;
   top: 0;
@@ -62,11 +63,10 @@
   content: "";
   display: block;
   height: 8px;
-  top: 100%;
+  top: 105%;
   position: absolute;
   background: #FBD506;
   width: 100%;
-  left: 5%;
   transform: skewX(40deg);
 }
 .hero-section__intro-content-text {
@@ -74,7 +74,7 @@
   line-height: 2.2rem;
   letter-spacing: 1px;
   text-align: center;
-  margin: 24px 64px;
+  margin: 24px 0;
 }
 .hero-section__intro-content-button {
   backface-visibility: hidden;
@@ -119,6 +119,15 @@
 .hero-section__intro-content-button:not(:disabled):active {
   transform: translateY(0.125rem);
 }
+@media (max-width: 768px) {
+  .hero-section__intro-content {
+    margin: auto 24px;
+  }
+  .hero-section__intro-content-text {
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+  }
+}
 
 .about {
   padding: 84px 0;
@@ -141,9 +150,15 @@
   align-items: center;
   font-size: 1rem;
   font-weight: 500;
-  line-height: 30px;
+  line-height: 1.8rem;
   letter-spacing: 0px;
   text-align: justify;
+}
+@media (max-width: 768px) {
+  .about__content-description {
+    font-size: 0.9rem;
+    margin: 0 24px;
+  }
 }
 
 .offer {
@@ -200,7 +215,7 @@
   height: auto;
   font-size: 1rem;
   font-weight: 500;
-  line-height: 30px;
+  line-height: 1.8rem;
   letter-spacing: 0px;
   text-align: justify;
 }
@@ -279,6 +294,24 @@
   z-index: 1;
 }
 
+@media (max-width: 768px) {
+  .portfolio__slider-cards-item {
+    width: 80%;
+  }
+  .portfolio__slider-cards-item img {
+    border-radius: 5px;
+  }
+  .portfolio__slider-cards {
+    height: 300px;
+  }
+  .portfolio {
+    padding: 50px 0;
+  }
+  .portfolio__title {
+    margin-bottom: 20px;
+    text-shadow: 1px 1px 2px #272727;
+  }
+}
 @keyframes sliding {
   0% {
     left: 0%;
@@ -309,7 +342,6 @@
   }
 }
 .footer {
-  height: 300px;
   background-color: rgba(251, 213, 6, 0.6);
   display: block;
   position: relative;
@@ -358,7 +390,7 @@
   margin: 10px;
   font-size: 1rem;
   font-weight: 500;
-  line-height: 30px;
+  line-height: 1.8rem;
   letter-spacing: 0px;
   text-align: justify;
   color: #272727;
@@ -371,12 +403,20 @@
   margin-bottom: 30px;
   font-size: 1rem;
   font-weight: 500;
-  line-height: 30px;
+  line-height: 1.8rem;
   letter-spacing: 0px;
   text-align: justify;
   color: #272727;
 }
 
+@media (max-width: 768px) {
+  .footer__content {
+    justify-content: flex-start;
+  }
+  .footer__content-info {
+    flex-direction: column;
+  }
+}
 .header {
   height: 60px;
   width: inherit;
