--- a/styles/shared/_mixins.scss
+++ b/styles/shared/_mixins.scss
@@ -7,7 +7,8 @@
 @mixin paragraph-typography {
     font-size: 1rem;
     font-weight: 500;
-    line-height: 30px;
+    line-height: 1.8rem;
     letter-spacing: 0px;
     text-align: justify;
 }
+
